old slurm/slurm-5070.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:3:
include/f/cuda_pattern/cuda_pattern.hpp:62:45: error: no member named 'cache_size' in 'f::cuda_pattern_data'
            std::cout<<"cache size= "<<data.cache_size<<", max dim " << config.max_dim << ", a.size = " << a.size()<<" ,data.cache =\n "<<data.cache << ", offset =" <<offset<<std::endl;
                                       ~~~~ ^
1 error generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
Merit: 8.58439e-08
ABS: 0.0011171

ug=
1	0	0.0005930819999999999842	-6.3790100000000002881e-09	0.0005930819999999999842	6.3790100000000002881e-09	0.082869600000000001594	-7.396030000000000153e-09	0.082869600000000001594	7.396030000000000153e-09	0.0005930819999999999842	6.3790100000000002881e-09	0.064142500000000005067	0	0.0005930819999999999842	-6.3790100000000002881e-09	0.064142500000000005067	0	

a is 
0	0	6.3790100000000002881e-09	0.0005930819999999999842	6.3790100000000002881e-09	0.0005930819999999999842	
-6.3790100000000002881e-09	0.0005930819999999999842	0	0.45410156000000001519	-0	0.064142500000000005067	
-6.3790100000000002881e-09	0.0005930819999999999842	-0	0.064142500000000005067	0	-1.1052246100000000517	

max dim 3, a.size = 18 ,data.cache =
 0x7f502fe00000, offset =648

real	0m0.793s
user	0m0.144s
sys	0m0.620s
